<resources>
    <string name="app_name">Weather App</string>
    <string name="sunrise">Sunrise</string>
    <string name="sunset">Sunset</string>
    <string name="wind">Wind</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>

    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="latitude_label">Latitude: %f</string>
    <string name="longitude_label">Longitude: %f</string>
    <string name="no_location_detected">
        No location detected. Make sure location is enabled on the device.
    </string>
    <string name="permission_denied_explanation">
        Permission was denied, but is needed for core functionality.
    </string>
    <string name="permission_rationale">
        Location permission is needed for core functionality
    </string>
    <string name="settings">Settings</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="select_the_city_from_the_map_showing_below">Select the city from the map showing below.</string>
    <string name="help">Help</string>

    <string name="blank">%s Celsius</string>
    <string name="min_temp">Min Temp: %s %s</string>
    <string name="max_temp">Min Temp: %s %s</string>
    <string name="updated_time">Updated at: %s</string>

    <string name="clear">clear</string>
    <string name="unit">Unit</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting">Setting</string>

</resources>

