<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/mainContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:visibility="visible">

            <LinearLayout
                android:id="@+id/addressContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"

                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/address"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:ellipsize="end"

                    android:maxLines="1"
                    android:textAlignment="center"
                    android:textSize="@dimen/_24sdp"
                    tools:text="India" />

                <TextView
                    android:id="@+id/updated_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_14sdp"
                    tools:text="20 April 2012, 20:08 PM" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/overviewContainer"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                app:layout_constraintBottom_toTopOf="@+id/detailsContainer"
                app:layout_constraintTop_toBottomOf="@+id/addressContainer">

                <TextView
                    android:id="@+id/status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textSize="@dimen/_18sdp"
                    tools:text="Clear Sky" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    >


                    <ImageView
                        android:id="@+id/image"
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_gravity="center_vertical"
                        android:gravity="center"
                        android:padding="1dp" />

                    <TextView
                        android:id="@+id/temp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:fontFamily="sans-serif-thin"
                        android:gravity="center"
                        android:textSize="@dimen/_40sdp"
                        tools:text="29°C" />
                </LinearLayout>

                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/temp_min"
                        android:layout_width="wrap_content"

                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        tools:text="Min Temp: 05:05 AM" />

                    <Space
                        android:layout_width="50dp"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:id="@+id/temp_max"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/_12sdp"
                        tools:text="Max Temp: 05:05 PM" />
                </LinearLayout>

            </LinearLayout>


            <LinearLayout
                android:id="@+id/detailsContainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunrise" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunrise"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/sunrise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            tools:text="06:40 AM" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/sunset" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/sunset"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/sunset"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            tools:text="06:40 AM" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/wind" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/wind"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/wind"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            tools:text="06:40 AM" />
                    </LinearLayout>
                </LinearLayout>

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/pressure" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/pressure"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/pressure"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            tools:text="06:40 AM" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="#3CF1EBF1"
                        android:gravity="center"
                        android:orientation="vertical"
                        android:padding="8dp">

                        <ImageView
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:src="@drawable/humidity" />

                        <Space
                            android:layout_width="wrap_content"
                            android:layout_height="5dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/humidity"
                            android:textSize="@dimen/_12sdp" />

                        <TextView
                            android:id="@+id/humidity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/_14sdp"
                            tools:text="06:40 AM" />
                    </LinearLayout>

                    <Space
                        android:layout_width="10dp"
                        android:layout_height="wrap_content" />


                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>